_build/html/reports/pr1_probability.log
Traceback (most recent call last):
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\site-packages\nbclient\client.py", line 1077, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\asyncio\base_events.py", line 573, in run_until_complete
    return future.result()
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\site-packages\nbclient\client.py", line 527, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\site-packages\nbclient\client.py", line 822, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "c:\users\emsuewil\anaconda3\envs\stats_for_hds\lib\site-packages\nbclient\client.py", line 730, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
set.seed(123)
roll <-sample(1:6,1000,replace=T)
n <- seq_along(roll)
d <- cumsum(roll==6)/n
 
plot(n, d, 
  xlab="Number of rolls", ylab="Relative frequency of 6s",
  xlim=c(1, 1000), ylim=c(0, 1)) 

------------------

[1;36m  File [1;32m"<ipython-input-1-0a9dedff2e73>"[1;36m, line [1;32m2[0m
[1;33m    roll <-sample(1:6,1000,replace=T)[0m
[1;37m                   ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-0a9dedff2e73>, line 2)

